--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -24,7 +24,7 @@ img {
     object-fit: cover;
 }
 
-form {
+.formulario {
     display: flex;
     flex-direction: column;
     align-items: center;
