--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -65,16 +65,21 @@ a {
 }
 
 .btn-cadastrar {
-    background-color: #ffffff;
-    width: 40dvw;
-    height: 6dvh;
-    border-radius: 7px;
-    font-family: 'century gothic', sans-serif;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin-top: 2dvh;
+    font-family: 'century gothic', sans-serif;
+    font-weight: 700;
+    background-color: #ffffff;
+    color: #182340;
+    width: 40dvw;
+    height: 6dvh;
+    border-radius: 9px;
+    cursor: pointer;
+    border-color: #556e94;
+    text-decoration: none;
 }
 
 .background {
