arrumei os forms

--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -56,13 +56,6 @@ input {
     border-color: #c9c9c9;
 }
 
-a {
-    font-family: 'century gothic', sans-serif;
-    color: #ffffff;
-    margin-bottom: 3dvh;
-    font-weight: 100;
-    text-decoration: none;
-}
 
 .btn-cadastrar {
     display: flex;
@@ -82,6 +75,16 @@ a {
     text-decoration: none;
 }
 
+a {
+    font-family: 'century gothic', sans-serif;
+    text-decoration: underline;
+    color: #ffffff;
+    margin-bottom: 1dvh;
+    font-weight: 100;
+    cursor: pointer;
+    text-decoration: none;
+}
+
 .background {
     display: flex;
     justify-content: center;
@@ -89,7 +92,7 @@ a {
     align-items: center;
 }
 
-.cadastro {
+/* .formulario2 {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -106,5 +109,4 @@ a {
     border-color: #556e94;
     text-decoration: none;
     /* tira o sublinhado */
-}
 
